# orthros

./: .envrc  .gitignore  devenv.nix  devshell.nix  flake.nix  version.nix
.github/: dependabot.yml  mergify.yml
.github/workflows/: ci-builds.yml  pr-verify-commit.yml  verify-reuse-compliance.yml
src/rust/: Cargo.lock.license  Cargo.toml
src/rust/crates/lib/orthros-common/: Cargo.toml
src/rust/crates/lib/orthros-common/src/: lib.rs
