# SPDX-FileCopyrightText: 2025 The Orthros Developers
#
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "orthros-common"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.98"
clap = "4.5.37"
config = "0.15.11"
directories = "6.0.0"
eyre = "0.6.12"
nix-daemon = "0.1.1"
nix-remote = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.16.0"
nix-compat.workspace = true